--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -9,7 +9,7 @@ onlyLabels: [ "TestBot" ]
 
 # Number of days of inactivity before an Issue or Pull Request with the stale label is closed.
 # Set to false to disable. If disabled, issues still need to be closed manually, but will remain marked as stale.
-daysUntilClose: false
+daysUntilClose: 1
 
 # Label to use when marking as stale
 staleLabel: botted
